add gitpod & fixed packages

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 /.vscode/compile_commands.json
 /.vscode/settings.json
 
+# Clangd
+/compile_commands.json
+/.clangd
+
 # Common CPP files
 *.o
 *.a
