--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,7 +3,7 @@
 # and commit this file to your remote git repository to share the goodness with others.
 
 image:
-  file: .gitpod.dockerfile
+  file: .gitpod.Dockerfile
 
 ports:
   - port: 6080
