make shared code for backend & Fix missing headers

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,6 +5,13 @@
 image:
   file: .gitpod.Dockerfile
 
+tasks:
+  - name: setup packages
+    init: sudo apt update
+    command: sudo apt install libcairo2-dev libpango1.0-dev libsdl2-dev libgtest-dev -y
+  - name: Setup xmake
+    command: bash <(curl -fsSL https://xmake.io/shget.text)
+
 ports:
   - port: 6080
     onOpen: open-preview
