fix x11 dialog & ffmepg link error on linux

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,8 +8,8 @@ image:
 tasks:
   - name: setup packages
     init: sudo apt update
-    command: sudo apt install libcairo2-dev libpango1.0-dev libsdl2-dev libgtest-dev -y
-  - name: Setup xmake
+    command: sudo apt install libcairo2-dev libpango1.0-dev libsdl2-dev libgtest-dev zenity libavformat-dev libswscale-dev libswresample-dev -y
+  - name: setup xmake
     command: bash <(curl -fsSL https://xmake.io/shget.text)
 
 ports:
